# apriltag_utils

./: .gitignore  CMakeLists.txt  Quat.hpp  README.md  Vec.hpp  package.xml
camera_info/: camerav2_1280x720.yaml
config/: detector_cfg.yaml
include/: Detector.hpp  Filter.hpp  common.hpp
include/eigen_ros/: Tform.hpp  Vec.hpp
include/math/: Quat.h  Quat.hpp  Tform.h  Tform.hpp  Vec.h  Vec.hpp
launch/: apriltag_detector.launch
scripts/: payload_single_UAV_visionfeedback.sh  pld_visfeedback.sh  plot.py  posePlot.py  posePlot_test_emul.py
src/: Detector.cpp  Estimator.cpp  Filter.cpp  apriltag_detector.cpp  apriltag_emulator.cpp  camera_node.cpp  common.hpp  detector_node.cpp  estimator_node.cpp  filter.cpp  filter_pose.cpp  sampling_node.cpp
src/tracktag/: CMakeLists.txt  Filter.cpp  common.hpp  filter_pose.cc  opencv_emulate.cc
src/tracktag/math/: Quat.h  Tform.h
tests/: CalibrationResult.ini  parameter.yaml  profiled.cpp  test.cpp
