<?xml version="1.0"?>
<package format="2">
  <name>apriltag_utils</name>
  <version>3.0.1</version>
  <description>rpi camera yc</description>
  <maintainer email="hei.go@mail.utoronto.ca">H S Helson Go</maintainer>
  <license>gplv3</license>


  <author email="cheng.yuan@flight.utias.utoronto.ca">Yuan Cheng</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
